# normal-modes-tools

./: pyproject.toml  readme.md
src/normal_modes_tool/: __init__.py  scan_result.py
src/normal_modes_tools/: __init__.py  atomic_masses.py  compare_nmodes.py  conversions.py  decomposition.py  displace.py  franck_condon_factors.py  geometry.py  huang_rhys_factors.py  normal_mode.py  printing.py  util.py
src/normal_modes_tools/compare/: __init__.py
src/normal_modes_tools/mulliken/: core.py
test/displace/: displace.py
test/displace/outputs/: SrOPh_displaced_along10.xyz
test/displace/pbs_scripts/: ZMAT  get-energies.sh  spawn.sh  submit.sh
test/pyrazine/: find_dQ.py  print_HRf.py
test/pyrazine/inputs/: ccsd-ano1-X.xyz  eomccsd-ano1-1B3u.xyz
test/sroph/: build_duszynski.py  huang_rhys_factors.py
test/sroph/duszynski/: build_duszynski.py
test/sroph/hrfs/: huang_rhys_factors.py
test/sroph/xyz/: SrOPh-5d_normal_modes.xyz
test/transform_gradient/: deuterate_xsim_gradient.py  readme.md
test/transform_gradient/inputs/: sroph_at_g0_lambda_ab.json  sroph_f0.xyz
test/transform_gradient/outputs/: sroph-5d_at_g0_kappa_a.json  sroph-5d_at_g0_lambda_ab.json  sroph-5d_f0.json
test/xsim/: deuterate_xsim_gradient.py  deuterate_xsim_nmodes.py  nmodes_xyz_to_nmodes_xsim_json.py
test/xsim/inputs/: sroph_at_g0_kappa_a.json
test/xsim/outputs/: sroph-5d_at_g0_kappa_a.json  sroph-5d_f0.json  sroph-5d_f0.xyz
