[project]
name = "normal_modes_tools"
version = "1.0.00"
description = "Tools for working with normal modes"
readme = "readme.md"
requires-python = ">=3.13"
authors = [
  {name = "Paweł Wójcik", email = "pawel.wojcik5@gmail.com"}
]
keywords = ["chemistry"]
dependencies = [
    "xyz_parser",
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
